# mcpadapt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md  quickstart.md
docs/guide/: crewai.md  google-genai.md  langchain.md  smolagents.md
docs/ref/: core.md  crewai_adapter.md  google_genai_adapter.md  langchain_adapter.md  smolagents_adapter.md
docs/stylesheets/: extra.css
examples/: crewai_pubmed.py  google_genai.py  langchain_pubmed.py  notebook_usage.ipynb  smolagents_pubmed.py  smolagents_structured_output.py  sse_usage.py
scripts/: bump_version.py
src/: echo.py
src/mcpadapt/: __init__.py  core.py  crewai_adapter.py  google_genai_adapter.py  langchain_adapter.py  smolagents_adapter.py  utils.py
src/mcpadapt/utils/: modeling.py
tests/: test_core.py  test_crewai_adapter.py  test_google_genai_adapter.py  test_langchain_adapter.py  test_smolagents_adapter.py
tests/utils/: test_modeling.py
